@@ -85,13 +85,3 @@ dd {margin:0 0 0 20px;}
 
 /* IMAGE AND VIDEO */
 img {max-width:100%; height:auto;}
-
-img.alignright {float:right; margin:0.4em 0 0.4em 1em;}
-img.alignleft {float:left; margin:0.4em 1em 0.4em 0;}
-img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
-
-.wp-caption {max-width:100%;}
-.wp-caption-text {text-align:center;}
-
-.gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
-.gallery-caption {max-width:100%; text-align:center;}
