@@ -1,10 +1,10 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: https://www.guidovanderleest.nl/myknowledgebase
-Version: 5.9
+Version: 6.0
 Author: Guido van der Leest
 Author URI: https://www.guidovanderleest.nl
-Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
+Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the native categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
 Tags: one-column, two-columns, right-sidebar, full-width-template, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -59,8 +59,8 @@ table {
 
 
 /* BODY AND CONTAINER */
-body {background:#fff; color:#333; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; text-align:left; word-wrap:break-word;}
-#container {max-width:1200px; position:relative; margin:0 auto 0; padding:0 20px;}
+body {-webkit-text-size-adjust:100%; background:#fff; color:#333; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; text-align:left; word-wrap:break-word;}
+#container {max-width:1200px; position:relative; margin:0 auto; padding:0 20px;}
 #container:after {content:''; display:block; height:0; clear:both;}
 
 
@@ -123,7 +123,7 @@ input[type="submit"], input[type="reset"], input[type="button"], button {cursor:
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, button:hover {background:#333;}
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
-select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#fff; color:#333;}
+select {-webkit-appearance:menulist; -moz-appearance:menulist; max-width:100%; background:#fff; color:#333;}
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
@@ -268,12 +268,11 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 .wp-post-image, .single-image {float:left; margin:0.4em 1em 0.4em 0;}
 
-.wp-caption {max-width:100%;}
 .wp-caption-text {text-align:center;}
 
+.gallery-item {margin:0 0 10px !important;}
 .gallery img {border:0 !important;}
-.gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
-.gallery-caption {max-width:100%; text-align:center;}
+.gallery-caption {margin:0 !important;}
 
 
 /* SEARCHFORM */
@@ -337,7 +336,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* BODY AND CONTAINER */
 	body {font-size:15px; line-height:1.5;}
 	body.custom-background {background-image:none !important;}
-	#container {width:98%; padding:10px 1% 0;}
+	#container {width:96%; padding:10px 2% 0;}
 
 	/* MAIN CONTENT AREA */
 	#content, #content-full {width:100%; clear:both; float:left; padding:0 0 20px;}
@@ -390,7 +389,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#categories-four ul:nth-of-type(2n+2) {margin:0 0 20px 0;}
 
 	/* IMAGES */
-	.wp-post-image, .single-image {width:50%; float:left; margin:0.3em 0.5em 0.3em 0;}
+	.wp-post-image, .single-image {max-width:50%;}
 
 	/* SIDEBAR AND WIDGETS */
 	#sidebar {width:100%; clear:both; float:left; padding:0;}
